<?xml version="1.0"?>
<package>
  <name>runners</name>
  <version>0.0.0</version>
  <description>The Runners package</description>

  <maintainer email="stevendaniluk8@gmail.com">Steven Daniluk</maintainer>
  <license>BSD</license>
  <author email="stevendaniluk8@gmail.com">Steven Daniluk</author>
  
  <!-- Build Tool Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Build Dependencies -->
  <build_depend>angles</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend> 
  <build_depend>pcl_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rplidar_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  
  <!-- Run Time Dependencies -->
  <run_depend>amcl</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>create_node</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>kobuki_bumper2pc</run_depend>
  <run_depend>kobuki_capabilities</run_depend>
  <run_depend>kobuki_node</run_depend>
  <run_depend>kobuki_safety_controller</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>navigation</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rplidar_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>stage_ros</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>teb_local_planner</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>yocs_cmd_vel_mux</run_depend>
  <run_depend>yocs_virtual_sensor</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>
  <run_depend>zeroconf_avahi</run_depend>
  
  <export>
    <nav_core plugin="${prefix}/misc/runners_planner_plugin.xml" />
  </export>
  
</package>
